src/app/feature/components/ddx-time-and-sales/ddx-time-and-sales.component.scss
@import '.././../../../styles.scss';

:host {
  width: 100%;
  height: 100%;
  min-height: 350px;
  position: relative;
  display: flex;
  flex-direction: column;
  background-color: $ddx-dark-main;

  .sale__header {
    padding: 10px;

    .sale-header__title {
      margin-bottom: 15px;
    }
  }

  table.ddx__table {
    thead.ddx-table__head,
    tbody.ddx-table__body {
      tr {
        th,
        td {
          @extend .body;
        }
      }
    }
  }
}

